tweak: fix scrollbar behavior

--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -5,19 +5,17 @@ $indent: max(1em, 10vw);
 .layout {
   display: flex;
   flex-direction: column;
-	align-items: center;
+  align-items: center;
   color: c.$white;
   background-color: c.$dark;
   perspective: 10px;
   height: 100vh;
-	// height: min-content;
-
-	overflow: overlay;
+  overflow: overlay;
   overflow-x: hidden;
-  overflow-y: scroll;
+
   &::-webkit-scrollbar {
     width: 10px;
-		background: transparent;
+    background: transparent;
   }
 
   &::-webkit-scrollbar-thumb {
@@ -25,14 +23,14 @@ $indent: max(1em, 10vw);
     background-color: c.$accent;
   }
 
-	.page {
-		padding: 80px 0 0;
-	}
+  .page {
+    padding: 80px 0 0;
+  }
 }
 
 .layout__destroying-fakes {
   position: absolute;
   left: 3%;
-	padding: 160px 0;
+  padding: 160px 0;
   z-index: 997;
 }
